--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
     <title>Yonic - digital marketing agency</title>
     <meta name="description"
         content="Yonic is a digital marketing agency helping businesses grow through SEO, social media, content marketing, and paid ads. Boost your online presence today.">
