add link to the global style css file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         rel="stylesheet">
     <!-- Globule reset CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <!-- CSS links -->
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Yonic - digital marketing agency</title>
     <meta name="description"
         content="Yonic is a digital marketing agency helping businesses grow through SEO, social media, content marketing, and paid ads. Boost your online presence today.">
